tests/paczka1/small_fuzzy/22798282.err
Error in line 8: zN2R S409 41,2
Error in line 6: jadTzqwu1OE S409 33,8
Error in line 11: wPw5eMntq S409 57,4
